--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/143/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /143
-title: "React Hebdo #143: RSC Quizz, useFormStatus, Next.js Website, Panda CSS, useLayoutEffect, Million.js, Immer, Super Apps, React-Three-Fiber, Vite..."
+title: "React Hebdo #143: RSC Quiz, useFormStatus, Next.js Website, Panda CSS, useLayoutEffect, Million.js, Immer, Super Apps, React-Three-Fiber, Vite..."
 authors: [slorber]
 date: 04-25-2023
 image: /img/TWIR_POST.png
@@ -67,7 +67,7 @@ Panda CSS est une nouvelle librairie CSS-in-JS sans runtime en cours de dévelop
 - 👥 Nouvelle vague de licenciements chez Meta qui touche aussi des profils tech open-source, dont [Mengdi Chen](https://twitter.com/mengdi_en/status/1648718077796786177) (React DevTools), [Robert Balicky](https://twitter.com/StatisticsFTW/status/1648820621252653056) (Relay), [Matt Carroll](https://twitter.com/mattcarrollcode/status/1648770402272018432) (DevRel React, en recherche d'un nouveau poste) et [Sean Keegan](https://twitter.com/DevRelSean/status/1649466893806215172) (DevRel React, en recherche d'un nouveau poste).
 - 👀 [React PR - experimental_useFormStatus](https://twitter.com/sebastienlorber/status/1651135782990561280): un nouveau hook `useFormState()` pourrait arriver dans React, dont la signature est [inspirée de Remix](https://twitter.com/sebmarkbage/status/1651191679943049216) `useNavigation()`.
 - 👀 [React.dev translation update](https://twitter.com/dan_abramov/status/1649575563055493120): les repositories de traduction de la nouvelle doc sont à jour. Il est possible de commencer à traduire la nouvelle doc.
-- 🧵 [Dan Abramov's RSC Quizz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleure intuition sur le fonctionnement des Server Components.
+- 🧵 [Dan Abramov's RSC Quiz](https://twitter.com/dan_abramov/status/1648923232937058304): un thread super intéressant qui pourrait vous aider à avoir une meilleure intuition sur le fonctionnement des Server Components.
 - 🧵 [Dan Abramov on the origins / inspirations of React Server Components (PHP/Hack/XHP)](https://twitter.com/dan_abramov/status/1648830869304426500)
 - 🧵 [useLayoutEffect + queueMicrotask](https://twitter.com/sebastienlorber/status/1650829494209466373): mon astuce qui a suscité plus d'intérêt que je ne pensais 😄
 - 🐦 [Dan Abramov on using Preact Signals](https://twitter.com/dan_abramov/status/1650892432119148546): cette librairie patch React, qui ne peut garantir son bon fonctionnement si vous décidez de l'utiliser.
