--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -45,7 +45,11 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-<Todo />
+---
+
+[Introducing storage on Vercel](https://vercel.com/blog/vercel-storage)
+
+---
 
 <SubscribeFormEmbed />
 
@@ -59,7 +63,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 The [Nylas Email and Calendar APIs](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) allow developers to build communications features that connect them to all major service providers in the world - with a single integration.
 
-Nylas makes selecting a use case and a server-side SDK language easy. You'll get a [step-by-step tutorial complete with a **ready-to-use React frontend**](https://www.nylas.com/blog/how-to-build-email-templates-with-react/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=) and download-ready codebase with your API credentials. Stop building and maintaining individual integrations with multiple providers and [start launching email and calendar features](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) with guaranteed 99.99% uptime and no maintenance downtime.  
+Nylas makes selecting a use case and a server-side SDK language easy. You'll get a [step-by-step tutorial complete with a **ready-to-use React frontend**](https://www.nylas.com/blog/how-to-build-email-templates-with-react/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=) and download-ready codebase with your API credentials. Stop building and maintaining individual integrations with multiple providers and [start launching email and calendar features](https://www.nylas.com/?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content&utm_term) with guaranteed 99.99% uptime and no maintenance downtime.
 
 [Start building with Nylas for free!](https://dashboard.nylas.com/register?utm_source=TWIR&utm_medium=sponsoredemail&utm_campaign=FY23Q2-TWIR-2P-DSU&utm_content=&utm_term=)
 
@@ -67,7 +71,9 @@ Nylas makes selecting a use case and a server-side SDK language easy. You'll get
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- https://twitter.com/GergelyOrosz/status/1652679796818694146
+- https://twitter.com/LinguaBrowse/status/1652858904995590144
+- https://www.youtube.com/watch?v=On9ghjix77c
 
 ---
 
@@ -89,7 +95,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [Tutoriel React TicTacToe 2023 de la doc !](https://www.youtube.com/watch?v=WSrdYekvgX4)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -99,7 +105,8 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Practical Guide To Not Blocking The Event Loop](https://www.bbss.dev/posts/eventloop/)
+- [TailwindCSS vs. UnoCSS](https://dev.to/mapleleaf/tailwindcss-vs-unocss-2a53)
 
 ---
 
