--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -11,7 +11,11 @@ Salut à tous !
 
 promo ReactSummit + confs!
 
-https://github.com/dozsolti/react-native-use-list
+Please try to make the announcement as natural as possible! The important phrase to use - React Summit - the biggest React conference worldwide.
+
+https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact
+
+A promo code with a 5% discount - ThisWeekInReact5
 
 <Todo />
 
@@ -45,11 +49,53 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
+[![Introducing storage on Vercel](/emails/issues/144/vercel.jpg)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+
+**[Introducing storage on Vercel](https://vercel.com/blog/vercel-storage)**
+
+https://vercel.com/ship
+
+https://twitter.com/dan_abramov/status/1653076024811307017
+
+https://twitter.com/sebastienlorber/status/1653328656142409730
+
+https://service-markup.vercel.app/
+
 ---
 
-[Introducing storage on Vercel](https://vercel.com/blog/vercel-storage)
+[Virtual DOM: Back in Block](https://millionjs.org/blog/virtual-dom)
+
+https://twitter.com/aidenybai/status/1652921424951275520
 
 ---
+
+[The Interactive Guide to Rendering in React](https://ui.dev/why-react-renders)
+
+- https://twitter.com/tylermcginnis/status/1651620922766372869
+
+---
+
+- 🔗 [State.new](https://twitter.com/DavidKPiano/status/1652038443105394694)
+
+---
+
+- 🐦 [Dan Abramov - "If we thought Qwik model was better we would have literally implemented it"](https://twitter.com/dan_abramov/status/1651055386101796864)
+- 🐦 [CSS scoping - upcoming CSS feature useful for React devs](https://twitter.com/sebastienlorber/status/1653432768544534531)
+- 📜 [Making animated tooltip with React and Framer Motion](https://sinja.io/blog/animated-tooltip-with-react-framer-motion)
+- 📜 [Server Components vs. SSR](https://www.webscope.io/blog/server-components-vs-ssr)
+- 📜 [The URL is the ultimate global state management tool](https://www.jacobparis.com/guides/url-as-state-management)
+- 📜 [Building a Type-Safe Tailwind with vanilla-extract](https://www.highlight.io/blog/typesafe-tailwind)
+- 📜 [Building a WebGL Carousel with React Three Fiber and GSAP](https://tympanus.net/codrops/2023/04/27/building-a-webgl-carousel-with-react-three-fiber-and-gsap/)
+- 📜 [Find and fix performance bottlenecks in your Remix app with Server Timing](https://www.jacobparis.com/guides/remix-server-timing) + https://twitter.com/jacobmparis/status/1652470552286699520
+- 📜 [Best YouTube Channels to learn React in 2023](https://www.code-insights.dev/posts/best-youtube-channels-to-learn-react-in-2023)
+
+- 📦 [Lingui 4.0](https://lingui.dev/blog/2023/04/26/announcing-lingui-4.0)
+- 📦 [Qwik v1.0](https://www.builder.io/blog/qwik-v1)
+- 📦 [Remix 1.16](https://github.com/remix-run/remix/releases/tag/remix%401.16.0) + https://twitter.com/markdalgleish/status/1653188527621025792
+- 📦 [React-Router 6.11](https://twitter.com/remix_run/status/1652000618620555264)
+- 🎥 [45% failed Dan's Server Component Quiz](https://www.youtube.com/watch?v=AGAax7WzStc)
+- 🎥 [Reactathon 2023 Day 1 Livestream](https://www.youtube.com/watch?v=gJaN9CnFqrI)
+- 🎙️ [The React Core team talks React Forget and the future](https://twitter.com/PodRocketpod/status/1653429138387243010)
 
 <SubscribeFormEmbed />
 
@@ -71,9 +117,26 @@ Nylas makes selecting a use case and a server-side SDK language easy. You'll get
 
 ## 📱 React-Native {#react-native}
 
-- https://twitter.com/GergelyOrosz/status/1652679796818694146
-- https://twitter.com/LinguaBrowse/status/1652858904995590144
-- https://www.youtube.com/watch?v=On9ghjix77c
+[Introducing React Native macOS 0.71](https://devblogs.microsoft.com/react-native/2023-04-27-announcing-macos-71/)
+
+---
+
+- 🧵 [File-based Expo Router demo](https://twitter.com/Baconbrix/status/1652404780881289216)
+- 🐦 [`npx create-expo-module --local`](https://twitter.com/aleqsio/status/1651268836593655808): super nouvelle feature Expo qui facilite la création d'un module natif local, sans utiliser de monorepo.
+- 🐦 [`npx create-expo`](https://twitter.com/Baconbrix/status/1652372955450441729): pour créer un projet Expo.
+- 🐦 [Bluesky app (iOS + Android + web) built by 1 dev with Expo](https://twitter.com/GergelyOrosz/status/1652679796818694146): le constat de Gergely Orosz lance de nombreux débats sur Twitter.
+- 📦 [Ignite v8.7.0](https://twitter.com/ir_ignite/status/1651064452781953024): remplace les tests e2e Detox par Maestro.
+- 📦 [Tamagui 1.17 - selectionStyles](https://twitter.com/tamagui_js/status/1651432667412566016)
+- 📦 [react-native-dnd](https://github.com/mgcrea/react-native-dnd)
+- 📦 [react-native-use-list](https://github.com/dozsolti/react-native-use-list)
+- 📦 [react-native-iconify](https://github.com/oktaysenkan/react-native-iconify)
+- 🎥 [How React Native Was Created At Facebook](https://www.youtube.com/watch?v=On9ghjix77c): Christopher Chedeau revient sur l'histoire de React-Native, un projet qui a failli être abandonné 🥲.
+- 🎥 [React Native Transitions with Skia](https://www.youtube.com/watch?v=PzKWpwmmRqM): William Candillon montre comment utiliser des transitions d'image basées sur des shaders et gestures. Cela peut demander d'adapter un peu les shaders glsl existants.
+- 🎥 [Is this the Worst Volume Control? React Native and Reanimated](https://www.youtube.com/watch?v=FqdcRBqVS78)
+- 🎙️ [RNR 265 - Chain React is Back!!](https://reactnativeradio.com/episodes/rnr-265-chain-react-is-back)
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -10% (code "REACTHEBDO").
+- 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
+- 👥 [Chain React](https://chainreactconf.com/) (Portland, 18-19 Mai) nous offre -10% sur les entrées (code "thisweekinreact").
 
 ---
 
@@ -95,24 +158,44 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Tutoriel React TicTacToe 2023 de la doc !](https://www.youtube.com/watch?v=WSrdYekvgX4)
+- 🎥 [Tutoriel React TicTacToe 2023 de la doc !](https://www.youtube.com/watch?v=WSrdYekvgX4)
+- 🎥 [Rendu 3D avec Babylon.js 6.0 ! - Actus JS de la semaine (01 mai 2023)](https://www.youtube.com/watch?v=lGO3vcpGsAw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
 ## 🔀 Autre {#other}
 
+- [Scoped CSS is back](https://keithjgrant.com/posts/2023/04/scoped-css-is-back/)
+- [Favour TypeScript Types Over Interfaces](https://www.lloydatkinson.net/posts/2023/favour-typescript-types-over-interfaces/)
 - [Practical Guide To Not Blocking The Event Loop](https://www.bbss.dev/posts/eventloop/)
+- [Introducing Deno KV](https://deno.com/blog/kv)
 - [TailwindCSS vs. UnoCSS](https://dev.to/mapleleaf/tailwindcss-vs-unocss-2a53)
+- [Configuring ESLint, Prettier, and TypeScript Together](https://blog.joshuakgoldberg.com/configuring-eslint-prettier-and-typescript-together/)
+- [JS private class fields considered harmful](https://lea.verou.me/2023/04/private-fields-considered-harmful/)
+- [Deno 1.33](https://twitter.com/deno_land/status/1652030907396530188)
+- [StackBlitz - WebContainers now run on Safari, iOS, and iPadOS](https://blog.stackblitz.com/posts/webcontainers-are-now-supported-on-safari/)
+- [Deno - A Gentle Introduction to Islands](https://deno.com/blog/intro-to-islands)
+- [Why I Like Using Maps (and WeakMaps) for Handling DOM Nodes](https://www.macarthur.me/posts/maps-for-dom-nodes)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/sebastienlorber/status/1653385919460696068
+
+https://twitter.com/thdxr/status/1653241247459430400
+
+https://twitter.com/jaredpalmer/status/1653186164692758528
+
+https://twitter.com/flybayer/status/1653159596079603718
+
+https://twitter.com/thdxr/status/1652433701530157062
+
+https://twitter.com/hellojoie/status/1651941767447494661
+
+https://twitter.com/nikitonsky/status/1651945993988866049
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
