--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -33,7 +33,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Start UI](/emails/issues/144/start_ui.png)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+[![Start UI](/emails/issues/144/start_ui.jpg)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
 
 **[Start UI [web] - Starter UI d’application web](https://github.com/BearStudio/start-ui-web/?utm_source=newsletter&utm_term=this-week-in-react)**
 
