--- a/website/newsletter/144/index.mdx
+++ b/website/newsletter/144/index.mdx
@@ -29,7 +29,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Start UI](/emails/issues/144/start_ui.png)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+[![Start UI](/emails/issues/144/start_ui.jpg)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
 
 **[Start UI [web] - Opinionated web app UI starter](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)**
 
