--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -53,13 +53,15 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 **[Introducing storage on Vercel](https://vercel.com/blog/vercel-storage)**
 
-https://vercel.com/ship
+Vercel vient de lancer son offre storage edge-first, particulièrement adaptée pour un usage dans les React Server Components et Next.js:
 
-https://twitter.com/dan_abramov/status/1653076024811307017
+- Vercel KV: store key-value Redis, basé sur Upstash.
+- Vercel Postgres: database PostgreSQL, basée sur Neon.
+- Vercel Blob: file storage, basé sur Cloudflare R2.
 
-https://twitter.com/sebastienlorber/status/1653328656142409730
+C'est la [Vercel Ship week](https://vercel.com/ship): d'autres nouveautés devraient être annoncées dans les prochains jours. L'image choisie nous laisse penser qu'il y aura une release Next.js demain, introduisant une nouvelle feature **Next.js Server Actions** permettent de co-localiser une API server avec un form React. Cela dévoile aussi la volonté d'améliorer le [progressive enhancement](https://twitter.com/sebastienlorber/status/1653701538336915456) dans les apps React, d'une manière assez similaire à Remix: le formulaire peut aussi fonctionner sans JavaScript ou hydratation.
 
-https://service-markup.vercel.app/
+Note: cet exemple n'est pas vulnérable aux injections SQL car il utilise des template literals.
 
 ---
 
