--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -49,7 +49,7 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ## ⚛️ React {#react}
 
-[![Introducing storage on Vercel](/emails/issues/144/vercel.jpg)](http://web.start-ui.com?utm_source=newsletter&utm_term=this-week-in-react)
+[![Introducing storage on Vercel](/emails/issues/144/vercel.jpg)](https://vercel.com/blog/vercel-storage)
 
 **[Introducing storage on Vercel](https://vercel.com/blog/vercel-storage)**
 
@@ -65,35 +65,36 @@ Note: cet exemple n'est pas vulnérable aux injections SQL car il utilise des te
 
 ---
 
-[Virtual DOM: Back in Block](https://millionjs.org/blog/virtual-dom)
+[![Million.js - Virtual DOM: Back in Block](/emails/issues/144/million.jpg)](https://millionjs.org/blog/virtual-dom)
 
-https://twitter.com/aidenybai/status/1652921424951275520
+**[Million.js - Virtual DOM: Back in Block](https://millionjs.org/blog/virtual-dom)**
 
----
+Article interactif qui présente Million.js et son concept de "Block Virtual DOM". Son approche du diffing est différente: non récursive, basée sur l'analyse statique et le dirty checking, assez similaire à Svelte.
 
-[The Interactive Guide to Rendering in React](https://ui.dev/why-react-renders)
-
-- https://twitter.com/tylermcginnis/status/1651620922766372869
+Million.js ne vient pas remplacer React, mais s'intègre avec pour améliorer les performances. Il est conseillé de ne l'utiliser que dans certains cas précis: beaucoup de contenus statiques et arbres UI avec une structure stables.
 
 ---
 
-- 🔗 [State.new](https://twitter.com/DavidKPiano/status/1652038443105394694)
+[![The Interactive Guide to Rendering in React](/emails/issues/144/rendering.jpg)](https://ui.dev/why-react-renders)
+
+**[The Interactive Guide to Rendering in React](https://ui.dev/why-react-renders)**
+
+Article interactif qui explique quand React re-render un composant React. Une bonne resource plutôt pour les débutants, avec des explications détaillées sur setState(fn), batching, memo, StrictMode etc...
 
 ---
 
 - 🐦 [Dan Abramov - "If we thought Qwik model was better we would have literally implemented it"](https://twitter.com/dan_abramov/status/1651055386101796864)
 - 🐦 [CSS scoping - upcoming CSS feature useful for React devs](https://twitter.com/sebastienlorber/status/1653432768544534531)
-- 📜 [Making animated tooltip with React and Framer Motion](https://sinja.io/blog/animated-tooltip-with-react-framer-motion)
+- 📜 [Making animated tooltip with React and Framer Motion](https://sinja.io/blog/animated-tooltip-with-react-framer-motion): article interactif qui implémente un beau système de tooltip avec Floating UI et de belles animations de layout Frame Motion.
+- 📜 [The URL is the ultimate global state management tool](https://www.jacobparis.com/guides/url-as-state-management): encourage l'usage de query-string, avec quelques exemples React.
 - 📜 [Server Components vs. SSR](https://www.webscope.io/blog/server-components-vs-ssr)
-- 📜 [The URL is the ultimate global state management tool](https://www.jacobparis.com/guides/url-as-state-management)
 - 📜 [Building a Type-Safe Tailwind with vanilla-extract](https://www.highlight.io/blog/typesafe-tailwind)
 - 📜 [Building a WebGL Carousel with React Three Fiber and GSAP](https://tympanus.net/codrops/2023/04/27/building-a-webgl-carousel-with-react-three-fiber-and-gsap/)
 - 📜 [Find and fix performance bottlenecks in your Remix app with Server Timing](https://www.jacobparis.com/guides/remix-server-timing) + https://twitter.com/jacobmparis/status/1652470552286699520
 - 📜 [Best YouTube Channels to learn React in 2023](https://www.code-insights.dev/posts/best-youtube-channels-to-learn-react-in-2023)
-
-- 📦 [Lingui 4.0](https://lingui.dev/blog/2023/04/26/announcing-lingui-4.0)
-- 📦 [Qwik v1.0](https://www.builder.io/blog/qwik-v1)
-- 📦 [Remix 1.16](https://github.com/remix-run/remix/releases/tag/remix%401.16.0) + https://twitter.com/markdalgleish/status/1653188527621025792
+- 📦 [Qwik v1.0](https://www.builder.io/blog/qwik-v1): sortie officielle du framework qui challenge React avec son concept de resumability. On peut utiliser React dans une application Qwik, ce qui devrait faciliter l'adoption.
+- 📦 [Lingui 4.0](https://lingui.dev/blog/2023/04/26/announcing-lingui-4.0): perçu de la lib i18n, et présente les nouveautés de la v4.0. Cette lib me semble être une bonne alternative à React-Intl: syntaxe ICU, message extraction, framework-agnostic, support React...
+- 📦 [Remix 1.16](https://github.com/remix-run/remix/releases/tag/remix%401.16.0): stabilise support de CSS Modules, CSS imports, Vanilla Extract, PostCSS, Tailwind...
 - 📦 [React-Router 6.11](https://twitter.com/remix_run/status/1652000618620555264)
 - 🎥 [45% failed Dan's Server Component Quiz](https://www.youtube.com/watch?v=AGAax7WzStc)
 - 🎥 [Reactathon 2023 Day 1 Livestream](https://www.youtube.com/watch?v=gJaN9CnFqrI)
