--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -99,6 +99,7 @@ Article interactif qui explique quand React re-render un composant React. Une bo
 - 🎥 [45% failed Dan's Server Component Quiz](https://www.youtube.com/watch?v=AGAax7WzStc)
 - 🎥 [Reactathon 2023 Day 1 Livestream](https://www.youtube.com/watch?v=gJaN9CnFqrI)
 - 🎙️ [The React Core team talks React Forget and the future](https://twitter.com/PodRocketpod/status/1653429138387243010)
+- 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5").
 
 <SubscribeFormEmbed />
 
