--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -121,19 +121,25 @@ Nylas makes selecting a use case and a server-side SDK language easy. You'll get
 
 ## 📱 React-Native {#react-native}
 
-[Introducing React Native macOS 0.71](https://devblogs.microsoft.com/react-native/2023-04-27-announcing-macos-71/)
+[![Introducing React Native macOS 0.71](/emails/issues/144/rnmacos.jpg)](https://devblogs.microsoft.com/react-native/2023-04-27-announcing-macos-71/)
+
+**[Introducing React Native macOS 0.71](https://devblogs.microsoft.com/react-native/2023-04-27-announcing-macos-71/)**
+
+Microsoft à sauté les releases React-Native macOS v0.69 et v0.70 pour passer directement à la v0.71. Le but est maintenant de rester à jour avec les autres plateformes: la v0.72 est déjà en cours de dev. Cela me semble très utile: d'après les retours ça n'est pas évident de mixer différentes versions React-Native au sein d'un même monorepo.
+
+Cette version 0.71 apporte un support expérimental de Fabric, ainsi que toutes les nouveautés qui sont arrivées récemment sur mobile: TypeScript, Flexbox... Microsoft et Meta collaborent et l'usage de cette plateforme semble en croissance croitre au sein des 2 entreprises: Meta utilise React-Native macOS sur Messenger Desktop par exemple.
 
 ---
 
-- 🧵 [File-based Expo Router demo](https://twitter.com/Baconbrix/status/1652404780881289216)
+- 🧵 [File-based Expo Router demo](https://twitter.com/Baconbrix/status/1652404780881289216): Evan Bacon propose une démo complete Expo Router avec support mobile et web.
 - 🐦 [`npx create-expo-module --local`](https://twitter.com/aleqsio/status/1651268836593655808): super nouvelle feature Expo qui facilite la création d'un module natif local, sans utiliser de monorepo.
 - 🐦 [`npx create-expo`](https://twitter.com/Baconbrix/status/1652372955450441729): pour créer un projet Expo.
 - 🐦 [Bluesky app (iOS + Android + web) built by 1 dev with Expo](https://twitter.com/GergelyOrosz/status/1652679796818694146): le constat de Gergely Orosz lance de nombreux débats sur Twitter.
 - 📦 [Ignite v8.7.0](https://twitter.com/ir_ignite/status/1651064452781953024): remplace les tests e2e Detox par Maestro.
 - 📦 [Tamagui 1.17 - selectionStyles](https://twitter.com/tamagui_js/status/1651432667412566016)
+- 📦 [react-native-iconify](https://github.com/oktaysenkan/react-native-iconify)
 - 📦 [react-native-dnd](https://github.com/mgcrea/react-native-dnd)
 - 📦 [react-native-use-list](https://github.com/dozsolti/react-native-use-list)
-- 📦 [react-native-iconify](https://github.com/oktaysenkan/react-native-iconify)
 - 🎥 [How React Native Was Created At Facebook](https://www.youtube.com/watch?v=On9ghjix77c): Christopher Chedeau revient sur l'histoire de React-Native, un projet qui a failli être abandonné 🥲.
 - 🎥 [React Native Transitions with Skia](https://www.youtube.com/watch?v=PzKWpwmmRqM): William Candillon montre comment utiliser des transitions d'image basées sur des shaders et gestures. Cela peut demander d'adapter un peu les shaders glsl existants.
 - 🎥 [Is this the Worst Volume Control? React Native and Reanimated](https://www.youtube.com/watch?v=FqdcRBqVS78)
@@ -187,22 +193,6 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/sebastienlorber/status/1653385919460696068
-
-https://twitter.com/thdxr/status/1653241247459430400
-
-https://twitter.com/jaredpalmer/status/1653186164692758528
-
-https://twitter.com/flybayer/status/1653159596079603718
-
-https://twitter.com/thdxr/status/1652433701530157062
-
-https://twitter.com/hellojoie/status/1651941767447494661
-
-https://twitter.com/nikitonsky/status/1651945993988866049
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/144/meme.jpg)](https://twitter.com/sebastienlorber/status/1653385919460696068)
 
 A plus 👋
