--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/144/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /144
-title: "React Hebdo #144: Next.js Server Actions, Million.js, Rendering, Layout Animations, Qwik, Lingui, Remix, React-Router, React-Native macOS, Expo Modules, Ignite..."
+title: "React Hebdo #144: Server Actions, Million.js, Rendering, Layout Animations, Qwik, Lingui, Remix, React-Router, React-Native macOS, Expo Modules, Ignite..."
 authors: [slorber]
 date: 05-02-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -178,8 +177,7 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 ## 🔀 Autre {#other}
 
 - [Deno 1.33](https://twitter.com/deno_land/status/1652030907396530188)
-- [Introducing Deno KV](https://deno.com/blog/kv)
-- [Deno - A Gentle Introduction to Islands](https://deno.com/blog/intro-to-islands)
+- [Deno KV](https://deno.com/blog/kv)
 - [Favour TypeScript Types Over Interfaces](https://www.lloydatkinson.net/posts/2023/favour-typescript-types-over-interfaces/)
 - [Practical Guide To Not Blocking The Event Loop](https://www.bbss.dev/posts/eventloop/)
 - [TailwindCSS vs. UnoCSS](https://dev.to/mapleleaf/tailwindcss-vs-unocss-2a53)
